<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="oSq-J2-xyM">
    <device id="retina6_1" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Search Repo View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="SearchRepoViewController" customModule="GithubCommits" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pre-Ko-oba">
                                <rect key="frame" x="35" y="504" width="344" height="33"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                <state key="normal" title="Show Commits!">
                                    <color key="titleColor" red="0.99918931720000004" green="0.73725490199999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="searchRepoPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="R2W-79-OW7"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sgk-wp-Qh3">
                                <rect key="frame" x="35" y="584.5" width="344" height="33"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                <state key="normal" title="Just Show A Default!">
                                    <color key="titleColor" red="0.99918931720000004" green="0.73725490199999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="showDefaultGithubInfoPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5lQ-xT-lJo"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Repo Owner Name" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ACt-i3-4hT">
                                <rect key="frame" x="35" y="398" width="344" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="erf-Jk-ydb"/>
                                </connections>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter owner name and repo name to see commits." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E7S-RL-gfd">
                                <rect key="frame" x="35" y="299.5" width="344" height="63.5"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Repo Name" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kwi-Zr-gFn">
                                <rect key="frame" x="35" y="448" width="344" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="J8p-F2-fbC"/>
                                </connections>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OR" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aUo-gt-hu1">
                                <rect key="frame" x="35" y="545" width="344" height="31.5"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="0.31372549019607843" green="0.66666666666666663" blue="0.3529411764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="pre-Ko-oba" firstAttribute="top" secondItem="Kwi-Zr-gFn" secondAttribute="bottom" constant="26" id="1HE-ZW-z3H"/>
                            <constraint firstItem="Sgk-wp-Qh3" firstAttribute="trailing" secondItem="pre-Ko-oba" secondAttribute="trailing" id="2Fp-0g-kJz"/>
                            <constraint firstItem="aUo-gt-hu1" firstAttribute="top" secondItem="pre-Ko-oba" secondAttribute="bottom" constant="8" id="4lc-y3-nxA"/>
                            <constraint firstItem="E7S-RL-gfd" firstAttribute="leading" secondItem="ACt-i3-4hT" secondAttribute="leading" id="8bU-b5-9sg"/>
                            <constraint firstItem="Kwi-Zr-gFn" firstAttribute="leading" secondItem="ACt-i3-4hT" secondAttribute="leading" id="BcM-lq-6A4"/>
                            <constraint firstItem="pre-Ko-oba" firstAttribute="leading" secondItem="Kwi-Zr-gFn" secondAttribute="leading" id="GWT-QR-nSd"/>
                            <constraint firstItem="E7S-RL-gfd" firstAttribute="trailing" secondItem="ACt-i3-4hT" secondAttribute="trailing" id="I8P-Md-b20"/>
                            <constraint firstItem="pre-Ko-oba" firstAttribute="trailing" secondItem="Kwi-Zr-gFn" secondAttribute="trailing" id="NC3-ET-XkH"/>
                            <constraint firstItem="ACt-i3-4hT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="35" id="Yqx-Cl-ZuW"/>
                            <constraint firstItem="Kwi-Zr-gFn" firstAttribute="top" secondItem="ACt-i3-4hT" secondAttribute="bottom" constant="20" id="aJ9-Io-stI"/>
                            <constraint firstItem="aUo-gt-hu1" firstAttribute="trailing" secondItem="E7S-RL-gfd" secondAttribute="trailing" id="dPI-kn-NIO"/>
                            <constraint firstItem="aUo-gt-hu1" firstAttribute="leading" secondItem="E7S-RL-gfd" secondAttribute="leading" id="ebX-3W-pCW"/>
                            <constraint firstItem="ACt-i3-4hT" firstAttribute="top" secondItem="E7S-RL-gfd" secondAttribute="bottom" constant="35" id="gb1-ga-hGP"/>
                            <constraint firstItem="Sgk-wp-Qh3" firstAttribute="leading" secondItem="pre-Ko-oba" secondAttribute="leading" id="hcd-0o-UOe"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ACt-i3-4hT" secondAttribute="trailing" constant="35" id="iK9-Zw-wm9"/>
                            <constraint firstItem="Kwi-Zr-gFn" firstAttribute="trailing" secondItem="ACt-i3-4hT" secondAttribute="trailing" id="k8s-K9-PJD"/>
                            <constraint firstItem="Sgk-wp-Qh3" firstAttribute="top" secondItem="aUo-gt-hu1" secondAttribute="bottom" constant="8" id="kf2-4b-bhg"/>
                            <constraint firstItem="ACt-i3-4hT" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-35" id="wOj-4y-8EY"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="9i0-8t-nSb"/>
                    <connections>
                        <outlet property="instructionsLabel" destination="E7S-RL-gfd" id="YZU-kz-xUC"/>
                        <outlet property="repoNameTextField" destination="Kwi-Zr-gFn" id="zvf-sq-bhM"/>
                        <outlet property="repoOwnerNameTextField" destination="ACt-i3-4hT" id="uhK-hc-P09"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1547.8260869565217" y="705.80357142857144"/>
        </scene>
        <!--Commit Table View Controller-->
        <scene sceneID="C5O-yE-2gT">
            <objects>
                <tableViewController id="tpg-JA-e8Y" customClass="CommitTableViewController" customModule="GithubCommits" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="W7f-42-Etq">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" red="0.31372549019607843" green="0.66666666666666663" blue="0.3529411764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="commit-cell-id" id="wNT-Cb-WTq" customClass="CommitTableViewCell" customModule="GithubCommits" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wNT-Cb-WTq" id="oTR-eq-Ijh">
                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                </tableViewCellContentView>
                            </tableViewCell>
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="tpg-JA-e8Y" id="lJ8-2z-Tku"/>
                            <outlet property="delegate" destination="tpg-JA-e8Y" id="z0P-le-Rng"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" id="XIf-bp-7Sh">
                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="A6a-NI-maB">
                            <color key="tintColor" red="0.99918931720000004" green="0.73725490199999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <action selector="searchPressed:" destination="tpg-JA-e8Y" id="fi4-5U-rdN"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="modal" identifier="search-info-identifier" id="cRN-I8-BFh"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="C56-ms-nKb" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="729" y="706"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="Vsx-Fp-o6l">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="oSq-J2-xyM" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zyu-VO-qiK">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="tpg-JA-e8Y" kind="relationship" relationship="rootViewController" id="swL-lX-Fc8"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="T8x-pF-DEE" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-75" y="706"/>
        </scene>
    </scenes>
</document>
