...
            self?.delegate?.commitsFound(commits: commits)
        }
    }
    
    func reportSearchFailed(message: String) {
        DispatchQueue.main.async { [weak self] in
            let alert = UIAlertController(title: "Oops!", message: message, preferredStyle: .alert)
            alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
            self?.present(alert, animated: true, completion: nil)
        }
    }
}

...
